==> sigfox-tech-radio/sigfox-ep-example-st-nucleo-xxxxxx/drivers/peripherals/mcal/src/tim.c <==
#include "tim.h"
#include "mcal.h"
#include "pwr.h"
#include "rcc.h"
#include "stddef.h"
#include "stdint.h"
#include "stm32l0xx_hal_conf.h"
#include "stm32l0xx_ll_bus.h"
#include "stm32l0xx_ll_tim.h"
#include "stm32l0xx_ll_rcc.h"
#define TIM_INSTANCE                    TIM2
#define TIM_NVIC_IRQN                   TIM2_IRQn
#define TIM_REMAP_LSE                   LL_TIM_TIM2_ETR_RMP_LSE
#define TIM_CNT_VALUE_MAX               0xFFFF
#define TIM_TARGET_TRIGGER_CLOCK_HZ     2048
#define TIM_PRESCALER_ETRF_LSE          1
#define TIM_PRESCALER_PSC_LSE           ((trigger_clock_hz) / (TIM_TARGET_TRIGGER_CLOCK_HZ * TIM_PRESCALER_ETRF_LSE))
#define TIM_CLOCK_SWITCH_LATENCY_MS     2
#define TIM_TIMER_DURATION_MS_MIN       1
#define TIM_TIMER_DURATION_MS_MAX       ((TIM_CNT_VALUE_MAX * 1000) / (tim_ctx.etrf_clock_hz))
#define _check_ll_status(void) { if (ll_status != SUCCESS) { status = MCAL_ERROR; goto errors; } }

MCAL_status_t TIM_init(uint8_t irq_priority) {
    // Local variables.
    MCAL_status_t status = MCAL_SUCCESS;
    ErrorStatus ll_status = SUCCESS;
    LL_TIM_InitTypeDef tim_init;
    LL_TIM_OC_InitTypeDef tim_oc_init;
    uint32_t trigger_clock_hz = LSE_VALUE;
    uint8_t idx = 0;
    // Enable peripheral clock.
    LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_TIM2);
    LL_APB1_GRP1_EnableClockSleep(LL_APB1_GRP1_PERIPH_TIM2);
    // Init context.
    tim_ctx.etrf_clock_hz = ((trigger_clock_hz) / (TIM_PRESCALER_ETRF_LSE * TIM_PRESCALER_PSC_LSE));
    tim_ctx.channel_running_mask = 0;
    // Init common channels parameters.
    for (idx = 0; idx < TIM_CHANNEL_LAST; idx++) {
        tim_ctx.channel[idx].duration_ms = 0;
        tim_ctx.channel[idx].irq_callback = NULL;
    }
    // Init CH1.
    tim_ctx.channel[TIM_CHANNEL_CH1].set_compare_pfn = &LL_TIM_OC_SetCompareCH1;
    tim_ctx.channel[TIM_CHANNEL_CH1].enable_it_pfn = &LL_TIM_EnableIT_CC1;
    tim_ctx.channel[TIM_CHANNEL_CH1].disable_it_pfn = &LL_TIM_DisableIT_CC1;
    tim_ctx.channel[TIM_CHANNEL_CH1].is_active_flag_pfn = &LL_TIM_IsActiveFlag_CC1;
    tim_ctx.channel[TIM_CHANNEL_CH1].clear_flag_pfn = &LL_TIM_ClearFlag_CC1;
    // Init CH2.
    tim_ctx.channel[TIM_CHANNEL_CH2].set_compare_pfn = &LL_TIM_OC_SetCompareCH2;
    tim_ctx.channel[TIM_CHANNEL_CH2].enable_it_pfn = &LL_TIM_EnableIT_CC2;
    tim_ctx.channel[TIM_CHANNEL_CH2].disable_it_pfn = &LL_TIM_DisableIT_CC2;
    tim_ctx.channel[TIM_CHANNEL_CH2].is_active_flag_pfn = &LL_TIM_IsActiveFlag_CC2;
    tim_ctx.channel[TIM_CHANNEL_CH2].clear_flag_pfn = &LL_TIM_ClearFlag_CC2;
    // Init CH3.
    tim_ctx.channel[TIM_CHANNEL_CH3].set_compare_pfn = &LL_TIM_OC_SetCompareCH3;
    tim_ctx.channel[TIM_CHANNEL_CH3].enable_it_pfn = &LL_TIM_EnableIT_CC3;
    tim_ctx.channel[TIM_CHANNEL_CH3].disable_it_pfn = &LL_TIM_DisableIT_CC3;
    tim_ctx.channel[TIM_CHANNEL_CH3].is_active_flag_pfn = &LL_TIM_IsActiveFlag_CC3;
    tim_ctx.channel[TIM_CHANNEL_CH3].clear_flag_pfn = &LL_TIM_ClearFlag_CC3;
    // Init CH4.
    tim_ctx.channel[TIM_CHANNEL_CH4].set_compare_pfn = &LL_TIM_OC_SetCompareCH4;
    tim_ctx.channel[TIM_CHANNEL_CH4].enable_it_pfn = &LL_TIM_EnableIT_CC4;
    tim_ctx.channel[TIM_CHANNEL_CH4].disable_it_pfn = &LL_TIM_DisableIT_CC4;
    tim_ctx.channel[TIM_CHANNEL_CH4].is_active_flag_pfn = &LL_TIM_IsActiveFlag_CC4;
    tim_ctx.channel[TIM_CHANNEL_CH4].clear_flag_pfn = &LL_TIM_ClearFlag_CC4;
    // Use LSE as trigger.
    LL_TIM_ConfigETR(TIM_INSTANCE, LL_TIM_ETR_POLARITY_NONINVERTED, LL_TIM_ETR_PRESCALER_DIV1, LL_TIM_ETR_FILTER_FDIV1);
    LL_TIM_SetRemap(TIM_INSTANCE, TIM_REMAP_LSE);
    LL_TIM_EnableExternalClock(TIM_INSTANCE);
    LL_TIM_SetTriggerInput(TIM_INSTANCE, LL_TIM_TS_ETRF);
    // Configure channels in output compare mode.
    tim_oc_init.OCMode = LL_TIM_OCMODE_FROZEN;
    tim_oc_init.OCState = LL_TIM_OCSTATE_DISABLE;
    tim_oc_init.CompareValue = 0;
    tim_oc_init.OCPolarity = LL_TIM_OCPOLARITY_HIGH;
    ll_status = LL_TIM_OC_Init(TIM_INSTANCE, LL_TIM_CHANNEL_CH1, &tim_oc_init);
    _check_ll_status();
    ll_status = LL_TIM_OC_Init(TIM_INSTANCE, LL_TIM_CHANNEL_CH2, &tim_oc_init);
    _check_ll_status();
    ll_status = LL_TIM_OC_Init(TIM_INSTANCE, LL_TIM_CHANNEL_CH3, &tim_oc_init);
    _check_ll_status();
    ll_status = LL_TIM_OC_Init(TIM_INSTANCE, LL_TIM_CHANNEL_CH4, &tim_oc_init);
    _check_ll_status();
    // Init timer.
    tim_init.Prescaler = (TIM_PRESCALER_PSC_LSE - 1);
    tim_init.CounterMode = LL_TIM_COUNTERMODE_UP;
    tim_init.Autoreload = TIM_CNT_VALUE_MAX;
    tim_init.ClockDivision = LL_TIM_CLOCKDIVISION_DIV1;
    ll_status = LL_TIM_Init(TIM_INSTANCE, &tim_init);
    _check_ll_status();
    // Configure timer interrupt.
    NVIC_SetPriority(TIM_NVIC_IRQN, irq_priority);
    NVIC_EnableIRQ(TIM_NVIC_IRQN);
    // Generate event to update registers.
    LL_TIM_GenerateEvent_UPDATE(TIM_INSTANCE);
errors:
    return status;
}

void TIM_de_init(void) {
    // Disable all channels.
    LL_TIM_CC_DisableChannel(TIM_INSTANCE, LL_TIM_CHANNEL_CH1);
    LL_TIM_CC_DisableChannel(TIM_INSTANCE, LL_TIM_CHANNEL_CH2);
    LL_TIM_CC_DisableChannel(TIM_INSTANCE, LL_TIM_CHANNEL_CH3);
    LL_TIM_CC_DisableChannel(TIM_INSTANCE, LL_TIM_CHANNEL_CH4);
    // Disable peripheral.
    LL_TIM_DisableCounter(TIM_INSTANCE);
    // Disable clock.
    LL_APB1_GRP1_DisableClock(LL_APB1_GRP1_PERIPH_TIM2);
}
