==> sigfox-tech-radio/sigfox-ep-example-st-nucleo-xxxxxx/drivers/peripherals/mcal/src/nucleo-wl33cc1/tim.c <==
#include "tim.h"
#include "mcal.h"
#include "pwr.h"
#include "rcc.h"
#include "stddef.h"
#include "stdint.h"
#include "stm32wl3x.h"
#include "stm32wl3x_ll_bus.h"
#include "stm32wl3x_ll_tim.h"
#include "stm32wl3x_ll_rcc.h"
#include "system_stm32wl3x.h"
#define TIM_INSTANCE                        TIM2
#define TIM_NVIC_IRQN                       TIM2_IRQn
#define TIM_CNT_VALUE_MAX                   0xFFFF
#define TIM_TARGET_TRIGGER_CLOCK_HZ         2048
#define TIM_CLOCK_SWITCH_LATENCY_MS         2
#define TIM_TIMER_DURATION_MS_MIN           1
#define TIM_TIMER_DURATION_MS_MAX           ((TIM_CNT_VALUE_MAX * 1000) / (tim_ctx.clock_hz))
#define _check_ll_status(void) { if (ll_status != SUCCESS) { status = MCAL_ERROR; goto errors; } }

MCAL_status_t TIM_init(uint8_t irq_priority) {
    // Local variables.
    MCAL_status_t status = MCAL_SUCCESS;
    ErrorStatus ll_status = SUCCESS;
    LL_TIM_InitTypeDef tim_init;
    LL_TIM_OC_InitTypeDef tim_oc_init;
    uint8_t idx = 0;
    // Enable peripheral clock.
    LL_APB0_GRP1_EnableClock(LL_APB0_GRP1_PERIPH_TIM2);
    // Init context.
    tim_ctx.channel_running_mask = 0;
    // Init common channels parameters.
    for (idx = 0; idx < TIM_CHANNEL_LAST; idx++) {
        tim_ctx.channel[idx].duration_ms = 0;
        tim_ctx.channel[idx].irq_callback = NULL;
    }
    // Init CH1.
    tim_ctx.channel[TIM_CHANNEL_CH1].set_compare_pfn = &LL_TIM_OC_SetCompareCH1;
    tim_ctx.channel[TIM_CHANNEL_CH1].enable_it_pfn = &LL_TIM_EnableIT_CC1;
    tim_ctx.channel[TIM_CHANNEL_CH1].disable_it_pfn = &LL_TIM_DisableIT_CC1;
    tim_ctx.channel[TIM_CHANNEL_CH1].is_active_flag_pfn = &LL_TIM_IsActiveFlag_CC1;
    tim_ctx.channel[TIM_CHANNEL_CH1].clear_flag_pfn = &LL_TIM_ClearFlag_CC1;
    // Init CH2.
    tim_ctx.channel[TIM_CHANNEL_CH2].set_compare_pfn = &LL_TIM_OC_SetCompareCH2;
    tim_ctx.channel[TIM_CHANNEL_CH2].enable_it_pfn = &LL_TIM_EnableIT_CC2;
    tim_ctx.channel[TIM_CHANNEL_CH2].disable_it_pfn = &LL_TIM_DisableIT_CC2;
    tim_ctx.channel[TIM_CHANNEL_CH2].is_active_flag_pfn = &LL_TIM_IsActiveFlag_CC2;
    tim_ctx.channel[TIM_CHANNEL_CH2].clear_flag_pfn = &LL_TIM_ClearFlag_CC2;
    // Init CH3.
    tim_ctx.channel[TIM_CHANNEL_CH3].set_compare_pfn = &LL_TIM_OC_SetCompareCH3;
    tim_ctx.channel[TIM_CHANNEL_CH3].enable_it_pfn = &LL_TIM_EnableIT_CC3;
    tim_ctx.channel[TIM_CHANNEL_CH3].disable_it_pfn = &LL_TIM_DisableIT_CC3;
    tim_ctx.channel[TIM_CHANNEL_CH3].is_active_flag_pfn = &LL_TIM_IsActiveFlag_CC3;
    tim_ctx.channel[TIM_CHANNEL_CH3].clear_flag_pfn = &LL_TIM_ClearFlag_CC3;
    // Init CH4.
    tim_ctx.channel[TIM_CHANNEL_CH4].set_compare_pfn = &LL_TIM_OC_SetCompareCH4;
    tim_ctx.channel[TIM_CHANNEL_CH4].enable_it_pfn = &LL_TIM_EnableIT_CC4;
    tim_ctx.channel[TIM_CHANNEL_CH4].disable_it_pfn = &LL_TIM_DisableIT_CC4;
    tim_ctx.channel[TIM_CHANNEL_CH4].is_active_flag_pfn = &LL_TIM_IsActiveFlag_CC4;
    tim_ctx.channel[TIM_CHANNEL_CH4].clear_flag_pfn = &LL_TIM_ClearFlag_CC4;
    // Configure channels in output compare mode.
    tim_oc_init.OCMode = LL_TIM_OCMODE_FROZEN;
    tim_oc_init.OCState = LL_TIM_OCSTATE_DISABLE;
    tim_oc_init.CompareValue = 0;
    tim_oc_init.OCPolarity = LL_TIM_OCPOLARITY_HIGH;
    ll_status = LL_TIM_OC_Init(TIM_INSTANCE, LL_TIM_CHANNEL_CH1, &tim_oc_init);
    _check_ll_status();
    ll_status = LL_TIM_OC_Init(TIM_INSTANCE, LL_TIM_CHANNEL_CH2, &tim_oc_init);
    _check_ll_status();
    ll_status = LL_TIM_OC_Init(TIM_INSTANCE, LL_TIM_CHANNEL_CH3, &tim_oc_init);
    _check_ll_status();
    ll_status = LL_TIM_OC_Init(TIM_INSTANCE, LL_TIM_CHANNEL_CH4, &tim_oc_init);
    _check_ll_status();
    // Init timer.
    tim_init.Prescaler = ((HSE_xtalFrequency / TIM_TARGET_TRIGGER_CLOCK_HZ) - 1);
    tim_init.CounterMode = LL_TIM_COUNTERMODE_UP;
    tim_init.Autoreload = TIM_CNT_VALUE_MAX;
    tim_init.ClockDivision = LL_TIM_CLOCKDIVISION_DIV1;
    tim_init.RepetitionCounter = 0;
    ll_status = LL_TIM_Init(TIM_INSTANCE, &tim_init);
    _check_ll_status();
    // Configure timer interrupt.
    NVIC_SetPriority(TIM_NVIC_IRQN, irq_priority);
    NVIC_EnableIRQ(TIM_NVIC_IRQN);
    // Generate event to update registers.
    LL_TIM_GenerateEvent_UPDATE(TIM_INSTANCE);
    // Update real clock frequency.
    tim_ctx.clock_hz = (HSE_xtalFrequency / tim_init.Prescaler);
errors:
    return status;
}

void TIM_de_init(void) {
    // Disable all channels.
    LL_TIM_CC_DisableChannel(TIM_INSTANCE, LL_TIM_CHANNEL_CH1);
    LL_TIM_CC_DisableChannel(TIM_INSTANCE, LL_TIM_CHANNEL_CH2);
    LL_TIM_CC_DisableChannel(TIM_INSTANCE, LL_TIM_CHANNEL_CH3);
    LL_TIM_CC_DisableChannel(TIM_INSTANCE, LL_TIM_CHANNEL_CH4);
    // Disable peripheral.
    LL_TIM_DisableCounter(TIM_INSTANCE);
    // Disable clock.
    LL_APB0_GRP1_DisableClock(LL_APB0_GRP1_PERIPH_TIM2);
}
